# indexOpt_readOpt_cacheRemoved

./: .gitignore  2.csv  comparison_result.txt  find_same_file-faster.py  find_same_file.py  readme.md
00.rust_for_iIM_optimizedRead-modified-skipFirstErrorFrame/: Rust_run.sh
00.rust_for_iIM_optimizedRead-modified-skipFirstErrorFrame/src/: utils.rs
00.rust_for_iIM_optimizedRead-modified/src/: utils-原版-修改read-修改index-修改IndexedTimsTOFData函数.rs  utils-原版-修改read-修改index.rs  utils-原版-修改read.rs  utils.rs
01.rust_for_iRT_optimizedRead-modified/: Rust_run.sh
01.rust_for_iRT_optimizedRead-modified-skipFirstErrorFrame/src/: utils.rs
01.rust_for_iRT_optimizedRead-modified/src/: main.rs  processing.rs  utils.rs
01.rust_for_iRT_optimizedRead/src/: main.rs  processing.rs  utils.rs
02.rust_for_rsm_optimizedRead-modified/: Cargo.toml
02.rust_for_rsm_optimizedRead-modified-extractPeakGroup/src/: main.rs  processing.rs  utils.rs
02.rust_for_rsm_optimizedRead-modified-skipfirstErrorFrame-cancelSliceIntoParIter/: Rust_run.sh  original_rust_run.sh
02.rust_for_rsm_optimizedRead-modified-skipfirstErrorFrame-cancelSliceIntoParIter-54rtlist/: Rust_run.sh  original_rust_run.sh  rsm_rust_run_jiangheng.sh  slurm-34107810.out  slurm-34108315_1.out  slurm-34108315_2.out
02.rust_for_rsm_optimizedRead-modified-skipfirstErrorFrame-cancelSliceIntoParIter-54rtlist/src/: main.rs  utils.rs
02.rust_for_rsm_optimizedRead-modified-skipfirstErrorFrame-cancelSliceIntoParIter/src/: main.rs  utils.rs
02.rust_for_rsm_optimizedRead-modified-skipfirstErrorFrame/src/: processing.rs  utils.rs
ORIGINAL-UNTOUCHED/00.rust_for_iIM_optimizedRead/: Cargo.toml
ORIGINAL-UNTOUCHED/00.rust_for_iIM_optimizedRead/src/: main.rs  processing.rs  utils.rs
ORIGINAL-UNTOUCHED/01.rust_for_iRT_optimizedRead/: Cargo.toml
shuaiyao-yuanban-extractPeakGroup/: Cargo.toml
shuaiyao-yuanban-extractPeakGroup/src/: cache.rs  main.rs  processing.rs  utils.rs
shuaiyao-yuanban/src/: main.rs
simplest-read-only-profiling-fix1/: Cargo.toml
simplest-read-only-profiling-fix1-opt1/: Cargo.toml  Rust_run.sh
simplest-read-only-profiling-fix1/src/: main.rs
tims_read_test/: Cargo.toml
tims_read_test/src/: main.rs
timstof_diagnostic/: Cargo.toml  Rust_run_withCP.sh
timstof_diagnostic/src/: main-copyFileToGivenLocation.rs  main.rs
(+4 files in other folders)
