[package]
name = "timstof_diagnostic"
version = "0.1.0"
edition = "2021"

[dependencies]
timsrust = "0.4.2"
rayon = "1.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16"
sysinfo = "0.31"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true